tests/bad/17/test.scm
(letrec ((f (lambda (x) y))) f)